# cprp

./: .gitignore  AGENTS.md  README.md  agent.py  context.py  main.py  prompts.py  pyproject.toml  requirements.txt  runner.py  stages.py
.github/prompts/: plan-imageAlgorithmAutomation.prompt.md
doc/: arch.md  development.md
interface/: agent_wrapper.py
optimizers/: README.md  __init__.py  autoresearch.py
optimizers/data/: prepare.py  program.md  run_exp.ps1  run_exp.sh
output/: latest
output/session_240d0a6784/run_20260418T161653Z_1b1f13382b/: manifest.json
output/session_240d0a6784/run_20260418T161653Z_1b1f13382b/logs/: events.jsonl
output/session_240d0a6784/run_20260418T161653Z_1b1f13382b/stages/: package.json  research.json
output/session_9a5a363efa/run_20260415T073616Z_fcc09e234f/: manifest.json  research.json  research_web_clues.json
output/session_a8e6c90c4c/run_20260415T073108Z_651307a393/: codegen.json  execution.json  manifest.json  quality.json  research.json
output/session_d7a788e454/run_20260415T073346Z_33115bc9e3/: codegen.json  execution.json  manifest.json  quality.json  research.json  research_web_clues.json
output/session_e925b63948/run_20260418T161730Z_bf47e48e1b/: codegen.json  execution.json  manifest.json  quality.json  research.json  research_web_clues.json
pipeline/: __init__.py  context.py  models.py  resilience.py  runner.py  stages.py  utils.py
pipeline/stages/: codegen.py  common.py  evaluate.py  execute.py  optimize.py  package.py  research.py
tools/: cli.py  cli_execute.py  log_tool.py  web_search.py
(+48 files in other folders)
